// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a TextField control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id=""
  initialValue=""
  left={null}
  location="none"
  max="any"
  min="any"
  minHeight={null}
  minWidth="1em"
  noborder={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="TextField"
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onError={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top={null}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
  width={null}
  xcss={null}
>
  <TextField__TextfieldContainerView
    className="ui-textfield-container"
    id="TextField-0"
    minWidth=""
  >
    <TextField__TextFieldView
      className="ui-textfield test-class"
      disabled={false}
      noborder={false}
      visible={true}
    >
      <TextField__StyledInput
        className="test-class"
        disabled={false}
        id=""
        initialValue=""
        max="any"
        min="any"
        obj="TextField"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        sizing="normal"
        step="any"
        style={Object {}}
        testing={true}
        tooltip=""
        type="text"
        value=""
        visible={true}
      />
    </TextField__TextFieldView>
  </TextField__TextfieldContainerView>
</Wrapper>
`;

exports[`Test disabling of a TextField control 1`] = `
<TextField
  disabled={true}
  id=""
  initialValue=""
  max="any"
  min="any"
  minWidth="1em"
  noborder={false}
  obj="TextField"
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  tooltip=""
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
/>
`;

exports[`Test retrieval of TextField props object 1`] = `
Object {
  "disabled": false,
  "id": "",
  "initialValue": "",
  "max": "any",
  "min": "any",
  "minWidth": "1em",
  "noborder": false,
  "obj": "TextField",
  "onBlur": [Function],
  "onChange": [Function],
  "onClear": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onValidation": [Function],
  "sizing": "normal",
  "step": "any",
  "style": Object {},
  "testing": true,
  "tooltip": "",
  "type": "text",
  "useclear": false,
  "usevalidation": false,
  "validators": Array [],
  "visible": true,
}
`;
